[package]
name = "alvik-rust"
version = "0.1.0"
authors = ["Pietro Tamilia <17928339+BRA1L0R@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "alvik-rust"
harness = false     # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
thiserror = "1.0.65"
ucpack = { version = "0.1.1", default-features = false, features = [
    "std",
    "strict",
] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
# futures-util = "0.3.31"
embassy-sync = "0.6.0"
futures = "0.3.31"

[build-dependencies]
embuild = "0.32.0"
